welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:9: error: ';' expected but 'while' found.
    } while (crossing()!=false)
      ^Poucet:12: error: 'while' expected but 'if' found.
  if (bizkit>=3){
  ^Poucet:16: error: '(' expected but '}' found.
} while (getCouleurSol()!=Color.orange)
^