welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var bizkit=0
do {
  bizkit=0
  
  do{
    avance()
    if (estSurBiscuit()){
      bizkit=bizkit+1
    } while (crossing()!=false)
    
  }
  if (bizkit>=3){
    gauche()
  } else droite()
  
} while (getCouleurSol()!=Color.orange)
avance()